# pytorch

./: pyproject.toml
src/pytorch/: airfol-self-noise.ipynb  automobile.ipynb  housing-dataset.ipynb  sonar-dataset.ipynb
src/pytorch/runs/: events.out.tfevents.1772710235.lnxd-i13e12.32511.0  events.out.tfevents.1772711564.lnxd-i13e12.32511.1  events.out.tfevents.1772711566.lnxd-i13e12.32511.2
src/pytorch/runs/Mar09_11-18-28_lnxd-i13e12/: events.out.tfevents.1773051508.lnxd-i13e12.21793.0
src/pytorch/runs/Mar13_11-05-40_lnxd-i13e12/: events.out.tfevents.1773396340.lnxd-i13e12.24404.0
src/pytorch/runs/Mar13_11-06-21_lnxd-i13e12/: events.out.tfevents.1773396381.lnxd-i13e12.24404.1
src/pytorch/runs/Mar13_11-07-04_lnxd-i13e12/: events.out.tfevents.1773396424.lnxd-i13e12.24404.2
src/pytorch/runs/Mar13_11-20-31_lnxd-i13e12/: events.out.tfevents.1773397231.lnxd-i13e12.24404.3
src/pytorch/runs/Mar13_11-21-12_lnxd-i13e12/: events.out.tfevents.1773397272.lnxd-i13e12.24404.4
